# pepers

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  PMW_SWOT_CROSSCHECK_2026-02-19.md  README.md  TESTING_STRATEGY.md  blind-review-stati-alterati.md  catalog-info.yaml  cross-check-forense-output.md  docker-compose.yml  pepers-setup  prompt-cross-check-forense.md  pyproject.toml  pyrightconfig.json  ricerca-coscienza-neuroscienze-stati-alterati.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  cross-repo-integration.yml  release.yml  sandbox-validate.yml  trigger-build.yml
.planning/: MILESTONES.md  NEXT-MILESTONE.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-ROADMAP.md  v10.0-ROADMAP.md  v11.0-ROADMAP.md  v12.0-ROADMAP.md  v13.0-REQUIREMENTS.md  v13.0-ROADMAP.md  v2.0-ROADMAP.md  v3.0-ROADMAP.md  v4.0-ROADMAP.md  v5.0-ROADMAP.md  v6.0-ROADMAP.md  v7.0-ROADMAP.md  v8.0-ROADMAP.md  v9.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
config/: gemini-settings-container.json
deploy/: rp-analyzer.service  rp-codegen.service  rp-discovery.service  rp-extractor.service  rp-mcp.service  rp-orchestrator.service  rp-pipeline.target  rp-validator.service
docs/: ARCHITECTURE.md  CROSS_CHECK_PR2.md  RUNBOOK.md
monitoring/: deploy.sh
samuel/: ARCADE_Lopes_Research_Dossier_2026.md  BC_educational_gaps.md  BC_innovation_proposal.md  CODEX_Lopes_Research_Dossier_2026.md  Lopes_Research_Dossier_2026.md  README.md  SOTA_PMW_SWOT_Analysis.md  UNESCO_alignment_2026.md  audit-report-claude-2026-03-07.md  claude-consensus-audit-2026-03-07.md  claude-pipeline-status-2026-03-07.md  consensus_gate_2026-03-07.md  consensus_scorecard.md  duality_analysis.md  final_intel_report.md  final_preliminary_edition.md  forum_next_steps_codex_claude.md  porto_protocol_rollout.md  prompt_chatgpt.md  prompt_claude.md  report_draft_gemini.md  revised_preliminary_edition_2026-03-07.md  stealth_math_blueprint.md  terminology_map.md  value_manifesto_pepers.md  veo_director_script.md
samuel/video/: veo_prompt_01_pepers_math_wonder.md  veo_prompt_02_pepers_hidden_rules.md
scripts/: smoke_test.py
services/analyzer/: llm.py  main.py  prompt.py
services/codegen/: explain.py  generators.py  main.py
services/discovery/: main.py  openalex.py
services/extractor/: latex.py  main.py  pdf.py  rag_client.py
services/mcp/: __main__.py  cli.py  server.py
services/orchestrator/: __init__.py  github_search.py  main.py  metrics.py  notifications.py  pipeline.py  scheduler.py
services/setup/: __init__.py  main.py  (+8 more)
shared/: __init__.py  cli_providers.json  config.py  db.py  llm.py  metrics.py  models.py  rag.py  server.py
tests/: conftest.py
(+187 files in other folders)
