[project]
name = "research-pipeline"
version = "0.1.0"
description = "Academic paper processing pipeline — microservices for discovery, analysis, extraction, validation, and code generation."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["shared*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (DB, HTTP)",
]
