[project]
name = "research-pipeline"
version = "0.1.0"
description = "Academic paper processing pipeline — microservices for discovery, analysis, extraction, validation, and code generation."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "arxiv>=2.4.0",
    "requests>=2.28",
    "google-genai>=1.0",
    "apscheduler>=3.10",
    "sympy>=1.12",
    "antlr4-python3-runtime==4.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
include = ["shared*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q -m 'not e2e'"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (DB, HTTP)",
    "e2e: End-to-end tests (real APIs, network required)",
    "slow: Slow calibration tests (manual/nightly only)",
]
