[project]
name = "pepers"
version = "0.1.0"
description = "PePeRS — Paper Extraction, Processing, Evaluation, Retrieval & Synthesis. Microservices for academic paper discovery, LLM analysis, formula extraction, CAS validation, and code generation."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "arxiv>=2.4.0",
    "requests>=2.28",
    "google-genai>=1.0",
    "apscheduler>=3.10",
    "sympy>=1.12",
    "antlr4-python3-runtime==4.11",
    "apprise>=1.9.7",
    "mcp>=1.0",
    "prometheus-client>=0.24.1",
]

[project.scripts]
pepers-mcp = "services.mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["shared*", "services*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q -m 'not e2e'"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (DB, HTTP)",
    "e2e: End-to-end tests (real APIs, network required)",
    "slow: Slow calibration tests (manual/nightly only)",
]
